--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
         /* Language and Environment */
-        "target": "es2016",
+        "target": "ES2022",
 
         /* Modules */
-        "module": "commonjs",
+        "module": "NodeNext",
         "rootDir": "./src",
+        "moduleResolution": "NodeNext",
 
         /* Emit */
         "outDir": "./build",
