--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "autoprojectsetup",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "bin": {
+    "projectsetup": "./build/index.js"
+  },
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
